<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_current"
        android:title="Display values [TOAST]"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="notifs_checkbox"
        android:title="@string/pref_title_notifs_checkbox"
        android:summary="@string/pref_description_notifs_checkbox"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_title_eth_invest"
        android:title="@string/pref_eth_invest"
        android:defaultValue="0"
        android:numeric="decimal"/>

    <EditTextPreference
        android:key="pref_title_btc_invest"
        android:title="@string/pref_btc_invest"
        android:defaultValue="0"
        android:numeric="decimal"/>

    <EditTextPreference
        android:key="pref_title_xrp_invest"
        android:title="@string/pref_xrp_invest"
        android:defaultValue="0"
        android:numeric="decimal"/>


    <Preference
        android:title="@string/power_ignore"
        android:key="no_doze">
    </Preference>




    <!-- android:action="android.intent.action.MAIN" -->
    <!-- android:targetPackage="com.example.sw.sw" -->



    <!-- <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications"
        android:defaultValue="true" />-->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--
    <RingtonePreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />-->

</PreferenceScreen>
